:art: Fix button column spacing and alignment

--- a/meteor/imports/ui/components/TrashModal/TrashModal.scss
+++ b/meteor/imports/ui/components/TrashModal/TrashModal.scss
@@ -1,4 +1,14 @@
-.recycle-bin table tbody tr td {
+.recycle-bin table {
   vertical-align: middle;
-  text-align: center;
+  tbody tr{
+      td {
+        vertical-align: middle;
+      }
+      td.button-column {
+        text-align: center;
+        vertical-align: middle;
+        white-space: nowrap;
+        width: 1px;
+      }
+    }
 }
