--- a/meteor/imports/ui/pages/Projects/Projects.scss
+++ b/meteor/imports/ui/pages/Projects/Projects.scss
@@ -12,9 +12,11 @@
               border: 0px;
           }
         }
-        td.center-column {
-          text-align: center;
-          vertical-align: middle;
+        td.button-column {
+            text-align: center;
+            vertical-align: middle;
+            white-space: nowrap;
+            width: 1px;
         }
     }
 }
